--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.11"
 pytest = "^7.4.0"
 black = "^23.7.0"
 ruff = "^0.0.287"
+pre-commit = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core"]
