--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,4 +51,4 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest tests/
+          poetry run pytest tests/
