chore(parser): implement tracing with python-defer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ black = "^23.7.0"
 ruff = "^0.0.287"
 pre-commit = "^3.4.0"
 pytest-check = "^2.2.2"
+python-defer = "^0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
