--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ line-length = 100
 
 [tool.ruff]
 line-length = 100
+select = ["E", "F", "W", "Q", "UP", "I", "N"]
 
 [tool.pytest.ini_options]
 addopts = "-rP"
