--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,12 +21,11 @@ repos:
       - id: pretty-format-json
       - id: trailing-whitespace
 
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.11.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.5
+    rev: v0.9.7
     hooks:
+      # Run the linter.
       - id: ruff
+        args: [ --fix ]
+      # Run the formatter.
+      - id: ruff-format
