fix: exclude .vscode from pre-commit
Signed-off-by: Leonardo Tsuda <3965277+ltsuda@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,5 @@ repos:
       - id: ruff-format
         # only check (don't format) + show diff on all files
         args: [--check, --diff, "."]
+
+exclude: ".vscode/.*"
